[gd_scene load_steps=29 format=1]

[ext_resource path="res://scene/mainui.gd" type="Script" id=1]
[ext_resource path="res://image/pause.png" type="Texture" id=2]
[ext_resource path="res://image/answer.png" type="Texture" id=3]
[ext_resource path="res://image/clock.png" type="Texture" id=4]
[ext_resource path="res://font/Digital Display.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scene/Popup.tscn" type="PackedScene" id=6]
[ext_resource path="res://image/popup1.png" type="Texture" id=7]
[ext_resource path="res://image/levelcomplete.png" type="Texture" id=8]
[ext_resource path="res://image/nextl.png" type="Texture" id=9]
[ext_resource path="res://image/starcolor.png" type="Texture" id=10]
[ext_resource path="res://image/crosss.png" type="Texture" id=11]
[ext_resource path="res://image/retry.png" type="Texture" id=12]
[ext_resource path="res://image/back.png" type="Texture" id=13]
[ext_resource path="res://image/circle.png" type="Texture" id=14]
[ext_resource path="res://image/done.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 14.0

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 258, 16.5 ), Vector2( 208, 16.5 ) ]
}

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="Animation" id=5]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 112.5, -60 ), Vector2( 112.5, 11 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star/star1:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star/star2:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.6, 0.6 ) ]
}

[sub_resource type="Animation" id=8]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("star/star3:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 0.7, 1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -400 ), Vector2( 0, 20 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 15, 0 ), Vector2( -200, 0 ) ]
}

[sub_resource type="Animation" id=11]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("retry:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 297 ), Vector2( 50, 297 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("backtoui:transform/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 230, 297 ), Vector2( 130, 297 ) ]
}

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 11.25, 11.25 )

[sub_resource type="Animation" id=13]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 70 ), Vector2( 0, 0 ) ]
}

[node name="mainui" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]

transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/TouchScreenButton"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Answerbtn" type="TouchScreenButton" parent="CanvasLayer"]

transform/pos = Vector2( 208, 16.5 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Answerbtn"]

transform/pos = Vector2( 1, 4 )
transform/scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Answerbtn"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Clock" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.5
margin/top = -60.0
margin/right = 152.0
margin/bottom = -20.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Clock"]

transform/pos = Vector2( 0, 15 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Clock"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -18.0
margin/top = 37.0
margin/right = 22.0
margin/bottom = 51.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.992188, 0.0116272, 0.0116272, 1 )
text = "02:00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Clock"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 93.0
margin/top = 146.0
margin/right = 133.0
margin/bottom = 160.0
text = "?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="Popuplevel" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -400.0
margin/right = 40.0
margin/bottom = -360.0

[node name="Sprite1" type="Sprite" parent="CanvasLayer/Popuplevel"]

transform/pos = Vector2( 112.5, 163 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Popuplevel"]

transform/pos = Vector2( 116.5, 245 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="changelevel" type="TouchScreenButton" parent="CanvasLayer/Popuplevel"]

transform/pos = Vector2( 97, 299 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="anim" type="Node2D" parent="CanvasLayer/Popuplevel"]

[node name="star" type="Node2D" parent="CanvasLayer/Popuplevel"]

transform/pos = Vector2( 106, 196 )

[node name="star1" type="Sprite" parent="CanvasLayer/Popuplevel/star"]

transform/pos = Vector2( -25, -5 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="star3" type="Sprite" parent="CanvasLayer/Popuplevel/star"]

transform/pos = Vector2( 37, -5 )
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 10 )

[node name="star2" type="Sprite" parent="CanvasLayer/Popuplevel/star"]

transform/pos = Vector2( 6, -11 )
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 10 )

[node name="cross" type="TouchScreenButton" parent="CanvasLayer/Popuplevel"]

transform/pos = Vector2( 173, 128 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 11 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popuplevel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 6 )
"anims/New Anim (2)" = SubResource( 7 )
"anims/New Anim (3)" = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer1" type="AnimationPlayer" parent="CanvasLayer/Popuplevel"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/animin = SubResource( 9 )
anims/animout = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Popuprestart" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 108.0
margin/bottom = 124.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Popuprestart"]

[node name="retry" type="TouchScreenButton" parent="CanvasLayer/Popuprestart"]

transform/pos = Vector2( 50, 297 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 12 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="backtoui" type="TouchScreenButton" parent="CanvasLayer/Popuprestart"]

transform/pos = Vector2( 130, 297 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 13 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popuprestart"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/animin = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Popupdied" type="Control" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -400.0
margin/right = 40.0
margin/bottom = -360.0

[node name="Sprite1" type="Sprite" parent="CanvasLayer/Popupdied"]

transform/pos = Vector2( 112.5, 163 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Popupdied"]

[node name="Sprite2 " type="Sprite" parent="CanvasLayer/Popupdied"]

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Popupdied"]

[node name="backretry" type="TouchScreenButton" parent="CanvasLayer/Popupdied"]

transform/pos = Vector2( 96, 299 )
transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 13 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popupdied"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer1" type="AnimationPlayer" parent="CanvasLayer/Popupdied"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/animin = SubResource( 9 )
anims/animout = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Keyboard" type="Control" parent="CanvasLayer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 40.0
margin/bottom = 110.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Keyboard"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 320.0
margin/right = 224.0
margin/bottom = 360.0
alignment = 0

[node name="btn1" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 12, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn1"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn2" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 34.5, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite1" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn2"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn3" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 57, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "2"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn3"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn4" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 79.5, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn4"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn5" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 102, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn5"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "4"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn5"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn6" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 124.5, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn6"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "5"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite5" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn6"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn7" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 147, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn7"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "6"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite6" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn7"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn8" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 169.5, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite7" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn8"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn8"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "7"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn9" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 192, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn9"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "8"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite8" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn9"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="btn10" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer"]

editor/display_folded = true
transform/pos = Vector2( 214.5, 39 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/Keyboard/HBoxContainer/btn10"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -5.0
margin/right = 21.0
margin/bottom = 9.0
text = "9"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite9" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer/btn10"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 14 )

[node name="HBoxContainer 2" type="HBoxContainer" parent="CanvasLayer/Keyboard"]

rect/min_size = Vector2( 225, 20 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 379.0
margin/right = 225.0
margin/bottom = 399.0
alignment = 0

[node name="btncross" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer 2"]

editor/display_folded = true
transform/pos = Vector2( 90, 7 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite9" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer 2/btncross"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 11 )

[node name="btndone" type="TouchScreenButton" parent="CanvasLayer/Keyboard/HBoxContainer 2"]

editor/display_folded = true
transform/pos = Vector2( 135, 7 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 12 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite9" type="Sprite" parent="CanvasLayer/Keyboard/HBoxContainer 2/btndone"]

transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Keyboard"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


[editable path="CanvasLayer/Popup"]
